Assignment-7/src/objects/API_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API Endpoint</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API_ Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>API Settings</label>
    <pluralLabel>API Settings</pluralLabel>
</CustomObject>